# CG

./: script.js
FASE_1/: lista_para_fazer.txt
fase1/: CMakeLists.txt
fase1/Estrutura/: estrutura.cpp  estrutura.h  example.xml
fase1/Files3D/: box.3d  cone.3d  plano.3d  sphere.3d
fase1/Generator/: box.cpp  cone.cpp  generator.cpp  sphere.cpp
fase1/engine/: engine.cpp
fase1/p04/: CMakeLists.txt  main.cpp
fase2/: CMakeLists.txt
fase2/Estrutura/: Transformacoes.cpp  Transformacoes.h  Vertices.cpp  Vertices.h  estrutura.cpp  estrutura.h  example2.xml  rotation.h  scale.h  structure.cpp  structure.h  translate.h  vertice.h
fase2/Examples/: example2.xml  example3.xml  example4.xml  sistemaSolar.xml  sistemaSolar2.xml
fase2/Files3D/: orbita.3d
fase2/Generator/: box.cpp  cilindro.cpp  cone.cpp  generator.cpp  plano.cpp  sphere.cpp  torus.cpp
fase2/engine/: engine.cpp  engine.h  parser.cpp
fase3/: CMakeLists.txt  script.js
fase3/Estrutura/: Cor.cpp  Escala.cpp  Group.cpp  Group.h  Rotacao.cpp  Rotacao.h  Transformacao.cpp  Translacao.cpp  Translacao.h
fase3/Examples/: example4.xml  sistemaSolar.xml
fase3/Generator/: bezier.cpp  generator.cpp
fase3/engine/: engine.cpp  engine.h  parser.cpp
fase3/engine/Camera/: camera.cpp
fase4/: CMakeLists.txt
fase4/Estrutura/: Cor.cpp  Group.cpp  Translacao.cpp
fase4/Estrutura/headers/: Forma.cpp  Forma.h  Group.h
fase4/Examples/: sistemaSolar.xml
fase4/Files3D/: plano.3d  sphere.3d
fase4/Generator/: box.cpp  generator.cpp  plano.cpp  sphere.cpp
fase4/engine/: engine.cpp
